--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
 		"vitest": "^0.25.3",
 		"web-vitals": "^3.3.1"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-auto": "^2.1.0"
+	}
 }
