--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
 		"@fontsource/fira-mono": "^4.5.10",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-vercel": "^3.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/cookie": "^0.5.1",
 		"eslint": "^8.28.0",
@@ -31,8 +30,5 @@
 		"vitest": "^0.25.3",
 		"web-vitals": "^3.3.1"
 	},
-	"type": "module",
-	"dependencies": {
-		"@sveltejs/adapter-auto": "^2.1.0"
-	}
+	"type": "module"
 }
